--- a/chatroom.html
+++ b/chatroom.html
@@ -1,178 +1,152 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>chatroom</title>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>chatroom</title>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <!-- BootStrap 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
 
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
 
-	<!-- Flexslider  -->
-	<link rel="stylesheet" href="css/flexslider.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="css/icomoon.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="css/bootstrap.css">
 
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <!-- Flexslider  -->
+    <link rel="stylesheet" href="css/flexslider.css">
 
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
+    <!-- Owl Carousel  -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	
-	<link rel="stylesheet" href="css/login.css">
-	<link rel="stylesheet" href="css/takeoff.css">	
-	<link rel="stylesheet" href="css/chat.css">	
-	<script src="script/index.js"></script>
-	<script src="script/chat.js"></script>
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="css/style.css">
 
-	</head>
-	<body>
-		
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 col-xs-2">
-					<div id="fh5co-logo"><a href="index.html" style="padding: 0;">NTOU's shop!</a></div>
-				</div>
-				<div class="col-md-6 col-xs-6 text-center menu-1">
-					<ul>
-						<li><a href="">New</a></li>
-						<li><a href="">Book</a></li>
-						<li><a href="">Clothes</a></li>
-						<li><a href="">3C</a></li>
-						<li><a href="">Sale</a></li> 
+    <!-- Modernizr JS -->
+    <script src="js/modernizr-2.6.2.min.js"></script>
 
-						<li class="has-dropdown">
-							<a href="" id="logoName">Member</a>
-							<ul class="dropdown">
-								<li><a href="login.html" id="in_out">Sign in/out</a></li>
-								<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
-								<li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
-								<li><a href="takeoff.html" id="check_in_out_3">我的商品</a></li>
-								<li><a href="#" id="check_in_out_4">個人資料</a></li>
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/takeoff.css">
+    <link rel="stylesheet" href="css/chat.css">
+    <script src="script/index.js"></script>
+    <script src="script/chatroom.js"></script>
+
+</head>
+
+<body>
+
+    <nav class="fh5co-nav" role="navigation">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-xs-2">
+                    <div id="fh5co-logo"><a href="index.html" style="padding: 0;">NTOU's shop!</a></div>
+                </div>
+                <div class="col-md-6 col-xs-6 text-center menu-1">
+                    <ul>
+                        <li><a href="">New</a></li>
+                        <li><a href="">Book</a></li>
+                        <li><a href="">Clothes</a></li>
+                        <li><a href="">3C</a></li>
+                        <li><a href="">Sale</a></li>
+
+                        <li class="has-dropdown">
+                            <a href="" id="logoName">Member</a>
+                            <ul class="dropdown">
+                                <li><a href="login.html" id="in_out">Sign in/out</a></li>
+                                <li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
+                                <li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
+                                <li><a href="takeoff.html" id="check_in_out_3">我的商品</a></li>
+                                <li><a href="#" id="check_in_out_4">個人資料</a></li>
                                 <li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
-							</ul>
-						</li>
+                            </ul>
+                        </li>
 
-					</ul>
-				</div>
-				<div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
-					<ul>
-						<li class="search">
-							<div class="input-group">
-								<input type="text" placeholder="Search..">
-								<span class="input-group-btn">
+                    </ul>
+                </div>
+                <div class="col-md-3 col-xs-4 text-right hidden-xs menu-2">
+                    <ul>
+                        <li class="search">
+                            <div class="input-group">
+                                <input type="text" placeholder="Search..">
+                                <span class="input-group-btn">
 								<button class="btn btn-primary" type="button"><i class="icon-search"></i></button>
 								</span>
-							</div>
-						</li>
-						<li class="shopping-cart"><a href="shoppingcart.html" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
-					</ul>
-				</div>
-			</div>
-			
-		</div>
-	</nav>
-	<div id="page">
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/sea.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Chatroom</h1>
-							<h2>National Taiwan Ocean University</h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
-	<div id="fh5co-contact">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-3 animate-box" >
-					<div class="fh5co-contact-info">
-						<h3 style="border-bottom: 1px solid rgba(1, 6, 101, 0.378);">Member Centre</h3>
-						<ul>
-							<li><a href="login.html" id="in_out">Sign in/out</a></li>
-							<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
-							<li><a href="upload.html" id="check_in_out_2" >上架商品</a></li>
-							<li><a href="takeoff.html" id="check_in_out_3" style="color:rgb(1, 6, 101);">我的商品</a></li>
-							<li><a href="memberInfo.html" id="check_in_out_4">個人資料</a></li>
-							<li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
-						</ul>
-					</div>
-				</div>
+                            </div>
+                        </li>
+                        <li class="shopping-cart"><a href="shoppingcart.html" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
+                    </ul>
+                </div>
+            </div>
 
-				<div class="col-md-9 animate-box" >
-					<h2 id="title">聊天室</h2>
-					<table id ="chat_box" class="center">
-						<tr>
-							<th></th>
-							<th>來自</th>
-							<th>訊息</th>
-							<th>時間</th>
-						</tr>
-						<tr class="no_read chat 01" id="1">
-						   	<td style="width: 10%; text-align: center;"><input type="checkbox" name="check" value="" /></td>
-							<td>Ex. 王小明</td>
-							<td>Ex. 尼好鴨鴨鴨鴨鴨</td>
-							<td>Ex. 2022-12-15</td>
-						</tr>
-						<tr class="no_read chat" id="2">
-							<td style="width: 10%; text-align: center;"><input type="checkbox" name="check" value="" /></td>
-						 	<td>Ex. 王小明</td>
-							<td>Ex. 尼好鴨鴨鴨鴨鴨</td>
-						 	<td>Ex. 2022-12-15</td>
-					 	</tr>
-						<tr class="already_read chat" id="3">
-							<td style="width: 10%; text-align: center;"><input type="checkbox" name="check" value="" /></td>
-						 	<td>Ex. 王小明</td>
-							<td>Ex. 尼好鴨鴨鴨鴨鴨</td>
-						 	<td>Ex. 2022-12-15</td>
-					 	</tr>	
-					</table>
-					<div class="form-group" style="margin-top: 15px; text-align: right;">
+        </div>
+    </nav>
+    <div id="page">
+        <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/sea.jpg);">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 text-center">
+                        <div class="display-t">
+                            <div class="display-tc animate-box" data-animate-effect="fadeIn">
+                                <h1>Chatroom</h1>
+                                <h2>National Taiwan Ocean University</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div id="fh5co-contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 animate-box">
+                        <div class="fh5co-contact-info">
+                            <h3 style="border-bottom: 1px solid rgba(1, 6, 101, 0.378);">Member Centre</h3>
+                            <ul>
+                                <li><a href="login.html" id="in_out">Sign in/out</a></li>
+                                <li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
+                                <li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
+                                <li><a href="takeoff.html" id="check_in_out_3" style="color:rgb(1, 6, 101);">我的商品</a></li>
+                                <li><a href="memberInfo.html" id="check_in_out_4">個人資料</a></li>
+                                <li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
+                            </ul>
+                        </div>
+                    </div>
 
-						<button onclick="" id="" value="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">刪除訊息</button>
-					</div>
-			</div>
-			
-		</div>
-	</div>
-	</div>
-	
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Carousel -->
-	<script src="js/owl.carousel.min.js"></script>
-	<!-- countTo -->
-	<script src="js/jquery.countTo.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	<!-- Main -->
-	<script src="js/main.js"></script>
-	</body>
+                    <div class="col-md-9 animate-box">
+                        <h2 id="title">聊天室</h2>
+                        <table id="chat_box" class="center">
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- jQuery -->
+        <script src="js/jquery.min.js"></script>
+        <!-- jQuery Easing -->
+        <script src="js/jquery.easing.1.3.js"></script>
+        <!-- Bootstrap -->
+        <script src="js/bootstrap.min.js"></script>
+        <!-- Waypoints -->
+        <script src="js/jquery.waypoints.min.js"></script>
+        <!-- Carousel -->
+        <script src="js/owl.carousel.min.js"></script>
+        <!-- countTo -->
+        <script src="js/jquery.countTo.js"></script>
+        <!-- Flexslider -->
+        <script src="js/jquery.flexslider-min.js"></script>
+        <!-- Main -->
+        <script src="js/main.js"></script>
+</body>
+
 </html>
-
