--- a/login.html
+++ b/login.html
@@ -121,8 +121,8 @@
                     <p><input id="regPwd" name="userPwd" type="password" placeholder="密碼 Password"></p>
                     <p><input id="checkPwd" name="checkPwd" type="password" placeholder="確認密碼 Confirm password"></p>
                     <p><input id="regTrueName" name="userEmail" type="text" placeholder="真實姓名"></p>
-                    <p><input id="regPhone" name="userEmail" type="text" placeholder="電話號碼"></p>
-                    <p><input id="regEmail" name="userEmail" type="text" placeholder="電子郵件 E-mail"></p>
+                    <p><input id="regPhone" name="userEmail" type="tell" placeholder="電話號碼"></p>
+                    <p><input id="regEmail" name="userEmail" type="email" placeholder="電子郵件 E-mail"></p>
                     <p align="right"><button id="regSubmit" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">註冊</button></p>
                     <hr>
                 </div>
