--- a/takeorder_3.html
+++ b/takeorder_3.html
@@ -34,6 +34,7 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<script src="script/index.js"></script>   
 	<script src="script/takeorder_3.js"></script>
+	<script  src="script/sendMail.js"></script>
 	
 	<link rel="stylesheet" href="css/upload.css">
 	<link rel="stylesheet" href="css/takeorder.css">
